# changes-stream-rust

./: Cargo.toml  README.md
src/: error.rs  event.rs  lib.rs
