[package]
name = "changes-stream2"
description = "couchdb follower"
version = "0.2.5"
authors = [
    "Ashley Williams <ashley666ashley@gmail.com>",
    "René Rössler <rene@freshx.de>",
]
repository = "https://github.com/elwerene/changes-stream-rust.git"
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1"
futures-util = "0.3"
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
serde = "1"
serde_derive = "1"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["native-tls"]
raw_value_doc = ["serde_json/raw_value"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
