[package]
name = "changes-stream2"
description = "couchdb follower"
version = "0.2.19"
authors = [
    "Ashley Williams <ashley666ashley@gmail.com>",
    "René Rössler <rene@freshx.de>",
]
repository = "https://github.com/elwerene/changes-stream-rust.git"
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1"
futures-util = "0.3"
serde_json = "1"
log = "0.4"
metrics = { version = "0.24", optional = true }
regex = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "json",
] }
serde = "1"
serde_derive = "1"
thiserror = "2"
tokio = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["native-tls"]

# change.doc as serde_json::value::RawValue
raw_value_doc = ["serde_json/raw_value"]

# metrics
metrics = ["dep:metrics", "dep:regex"]

# tls library selection
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
